cmake_minimum_required(VERSION 2.6)
find_package(PCL 1.7 REQUIRED)
find_package(OpenCV 2.3 REQUIRED)
find_package(CGAL REQUIRED)
find_package(VTK REQUIRED)
#find_package(CGAL QUIET COMPONENTS Core )
find_package(Qt4 REQUIRED)
find_package(Protobuf REQUIRED)

SET(LABEL_SOURCES MSHLabel/MSHLabel.cpp)
SET(LABEL_HEADERS MSHLabel/MSHLabel.h)
set(CMAKE_CXX_FLAGS "-frounding-math -O3")
set(CMAKE_BUILD_TYPE "DEBUG")
SET(SOURCES ${LABEL_SOURCES} Accessories.cpp Calibrator.cpp Landmark.cpp main.cpp RobotDetector.cpp Segment2D.cpp mainwindow.cpp depthdevice.cpp fieldview.cpp pointcloudviewer.cpp cluster.cpp messages.pb.cc)
SET(HEADERS ${LABEL_HEADERS} Accessories.h Calibrator.h Landmark.h RobotDetector.h Segment2D.h mainwindow.h mainwindow_ui.h depthdevice.h Defines.h fieldview.h pointcloudviewer.h ColorModelConversions.h cluster.h messages.pb.h)
QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})
INCLUDE(${QT_USE_FILE} ${CGAL_USE_FILE})
INCLUDE(${VTK_USE_FILE})
include_directories(${PCL_INCLUDES} ${OpenCV_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${VTK_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS} ${CGAL_LIBRARIES_DIR} ${VTK_LIBRARY_DIRS})
ADD_DEFINITIONS(${QT_DEFINITIONS} ${PCL_DEFINITIONS})
ADD_EXECUTABLE(openni_viewer ${SOURCES} ${HEADERS_MOC})
SET(VTK_LIBRARIES QVTK)
TARGET_LINK_LIBRARIES(openni_viewer ${QT_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBS} ${VTK_LIBRARIES} ${PROTOBUF_LIBRARY} CGAL)
